# cantomeet-notes

./: .gitignore  docker-compose.yml  env.example
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  reset_database.sh
backend/alembic/: env.py
backend/alembic/versions/: 23160bf014ef_add_processing_task_table.py  48940594b2d1_add_detailed_minutes_to_summary.py  79be45794254_init_schema.py  add_auth_and_workspace.py
backend/app/: main.py
backend/app/api/: auth.py  meetings.py  routes.py  tasks.py  transcription.py  workspaces.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  action_item.py  meeting.py  processing_task.py  summary.py  transcript.py  user.py  workspace.py
backend/app/schemas/: auth.py  meeting.py  meeting_extended.py  task.py  workspace.py
backend/app/services/: speechmatics_client.py  storage_service.py  summarization_service.py  transcription_service.py  whisper_client.py
backend/app/tasks/: __init__.py  queue.py  summarization.py  transcription.py  worker.py
backend/app/utils/: data_mapping.py
backend/docs/: background-tasks.md
backend/scripts/: check_asr_config.py  start_worker.sh  start_worker_safe.sh  test_speechmatics.py  test_transcription_api.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx  vite-env.d.ts
nginx/: nginx.conf  notes.companionai.life.conf
(+44 files in other folders)
